# app/Http/Requests/Order/CreateRequest.php
@@ -20,12 +20,14 @@ use Illuminate\Validation\Rule;
  *     @OA\Property(
  *          property="type",
  *          type="string",
- *          example="rent | purchase"
+ *          enum={"rent", "purchase"},
+ *          example="rent"
  *      ),
  *     @OA\Property(
  *          property="time",
  *          type="integer",
- *          example="4 | 8 | 12 | 24"
+ *          enum={"4", "8", "12", "24"},
+ *          example="4"
  *      )
  * )
  */
