# storage/api-docs/api-docs.json
@@ -141,7 +141,7 @@
                     "Orders"
                 ],
                 "summary": "Оформление заказа",
-                "description": "Если type = 'rent', то необходимо также поле time",
+                "description": "type = rent | purchase. Если type = 'rent', то необходимо также поле time.",
                 "operationId": "ea7f9f7ac84384bee1c0ea5239cfee15",
                 "requestBody": {
                     "required": true,
@@ -396,11 +396,21 @@
                     },
                     "type": {
                         "type": "string",
-                        "example": "rent | purchase"
+                        "enum": [
+                            "rent",
+                            "purchase"
+                        ],
+                        "example": "rent"
                     },
                     "time": {
                         "type": "integer",
-                        "example": "4 | 8 | 12 | 24"
+                        "enum": [
+                            "4",
+                            "8",
+                            "12",
+                            "24"
+                        ],
+                        "example": "4"
                     }
                 },
                 "type": "object"
@@ -413,7 +423,13 @@
                 "properties": {
                     "time": {
                         "type": "integer",
-                        "example": "4 | 8 | 12 | 24"
+                        "enum": [
+                            "4",
+                            "8",
+                            "12",
+                            "24"
+                        ],
+                        "example": "4"
                     }
                 },
                 "type": "object"
